fixed a issue on overflow

--- a/src/src/components/layout/layout.module.css
+++ b/src/src/components/layout/layout.module.css
@@ -20,12 +20,12 @@ header h1 .small {
 }
 
 .fullHeight {
-  height: calc(100vh - 45px);
+  min-height: calc(100vh - 45px);
 }
 
 .container {
   background-color: #1b1c1df5;
-  padding-top: 75px;
+  padding: 75px 0;
 }
 
 .componentContainer {
